DEC-5: Add DHL shipping gateway configuration

--- a/phpspec.yml.dist
+++ b/phpspec.yml.dist
@@ -1,4 +1,4 @@
 suites:
     main:
         namespace: BitBag\SyliusDhlPlugin
-        psr4_prefix: Acme\SyliusDhlPlugin
+        psr4_prefix: BitBag\SyliusDhlPlugin
