--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.1", "8.2", "8.3"]
-                symfony: ["^5.4", "^6.4"]
-                sylius: ["~1.13.0"]
-                node: ["20.x"]
-                mysql: ["8.0"]
+                php: [ "8.1", "8.2", "8.3" ]
+                symfony: [ "^5.4", "^6.4" ]
+                sylius: [ "~1.13.0" ]
+                node: [ "^18.0", "^20.0" ]
+                mysql: [ "8.0" ]
 
         env:
             APP_ENV: test
@@ -159,6 +159,10 @@ jobs:
             -
                 name: Validate database schema
                 run: (cd tests/Application && bin/console doctrine:schema:validate)
+
+            -
+                name: Run ECS
+                run: vendor/bin/ecs check src
 
             -
                 name: Run PHPStan
