--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "symfony/web-profiler-bundle": "^5.4 || ^6.4"
     },
     "conflict": {
-        "symfony/framework-bundle": "6.2.8"
+        "symfony/framework-bundle": "6.2.8",
+        "behat/mink-selenium2-driver": ">=1.7.0"
     },
     "config": {
         "sort-packages": true,
@@ -54,15 +55,10 @@
             "symfony/flex": true
         }
     },
-    "extra": {
-        "symfony": {
-            "require": "^5.4 || ^6.4"
-        }
-    },
     "autoload": {
         "psr-4": {
             "BitBag\\SyliusDhlPlugin\\": "src/",
-            "BitBag\\Acme\\SyliusDhlPlugin\\": "tests/"
+            "Tests\\BitBag\\SyliusDhlPlugin\\": "tests/"
         }
     },
     "autoload-dev": {
