--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,14 +1,18 @@
 parameters:
+    level: max
     reportUnmatchedIgnoredErrors: false
-    checkMissingIterableValueType: false
-    level: 8
-
     paths:
         - src
+        - tests/Behat
 
-    excludes_analyse:
+    excludePaths:
         # Makes PHPStan crash
         - 'src/DependencyInjection/Configuration.php'
 
+        # Test dependencies
+        - 'tests/Application/app/**.php'
+        - 'tests/Application/src/**.php'
+
     ignoreErrors:
         - '/Parameter #1 \$configuration of method Symfony\\Component\\DependencyInjection\\Extension\\Extension::processConfiguration\(\) expects Symfony\\Component\\Config\\Definition\\ConfigurationInterface, Symfony\\Component\\Config\\Definition\\ConfigurationInterface\|null given\./'
+        - identifier: missingType.iterableValue
