--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,7 @@
          colors="true"
          bootstrap="tests/Application/config/bootstrap.php">
     <testsuites>
-        <testsuite name="DpdPlShippingExportPlugin Test Suite">
+        <testsuite name="BitBagSyliusDhlPlugin Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
