--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> bitbag/shipping-export-plugin ###
+/shipping_labels/
+###< bitbag/shipping-export-plugin ###
