--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bitbag/shipping-export-plugin": "dev-1.14-upgrade",
         "sylius/sylius": "~1.14.0"
     },
     "require-dev": {
@@ -62,7 +63,7 @@
     "autoload": {
         "psr-4": {
             "BitBag\\SyliusDhlPlugin\\": "src/",
-            "BitBag\\Acme\\SyliusDhlPlugin\\": "tests/"
+            "Tests\\BitBag\\SyliusDhlPlugin\\": "tests/"
         }
     },
     "autoload-dev": {
