--- a/tests/Application/config/routes.yaml
+++ b/tests/Application/config/routes.yaml
@@ -7,3 +7,7 @@ bitbag_sylius_example_shop:
 bitbag_sylius_example_admin:
     resource: "@BitBagSyliusDhlPlugin/config/admin_routing.yml"
     prefix: /admin
+
+bitbag_shipping_export_plugin:
+    resource: "@BitBagSyliusShippingExportPlugin/Resources/config/routing.yml"
+    prefix: /admin
