--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -18,3 +18,11 @@ sylius_shop:
 
 sylius_api:
     enabled: true
+
+sylius_ui:
+    events:
+        sylius.admin.order.show.shipment_content:
+            blocks:
+                download_shipping_label_button:
+                    template: '@BitBagSyliusDhlPlugin/Admin/Order/Show/Shipment/_downloadShippingLabelButton.html.twig'
+                    priority: 25
