DEC-8: Change twig extension function return type to int instead of string and move sylius_ui configuration to plugin config.yml

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,2 +1,10 @@
 imports:
   - { resource: "@BitBagSyliusShippingExportPlugin/Resources/config/config.yml" }
+
+sylius_ui:
+  events:
+    sylius.admin.order.show.shipment_content:
+      blocks:
+        download_shipping_label_button:
+          template: '@BitBagSyliusDhlPlugin/Admin/Order/Show/Shipment/_downloadShippingLabelButton.html.twig'
+          priority: 25
