Add monolog config for shipping export logs, log api errors, fix flash translation and shipping gateway form validation

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,4 +1,6 @@
 imports:
+  - { resource: "monolog.yaml" }
+
   - { resource: "@BitBagSyliusShippingExportPlugin/Resources/config/config.yml" }
 
 sylius_ui:
